# Auditing_Layer

./: .env.example  AGENTS.md  Dockerfile  README.md  cloudbuild.yaml  requirements.txt
config/: rules.yaml  (+1 more)
ergonosis_unification_src/: .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  cloudrun_job.yaml  pyproject.toml  requirements.txt  unification_config.yaml
ergonosis_unification_src/scripts/: databricks_create_tables.sql  generate_smb_dataset.py  run_rich_mock.py  run_smb_pipeline.py
ergonosis_unification_src/src/: constants.py  feedback_processor.py  ms_graph_client.py  pipeline.py  query_interface.py
ergonosis_unification_src/src/api/: health.py
ergonosis_unification_src/src/etl/: transformer.py  validator.py  watermark.py
ergonosis_unification_src/src/ingestion/: microsoft_adapter.py  plaid_adapter.py
ergonosis_unification_src/src/matching/: engine.py  normalizer.py  tier1_exact.py  tier2_composite.py  tier3_fuzzy.py
ergonosis_unification_src/tests/: conftest.py  test_config_loader.py  test_constants.py  test_delta_client.py  test_feedback_processor.py  test_local_store.py  test_matching_engine.py  test_merge_handler.py  test_metrics_and_errors.py  test_microsoft_adapter.py  test_models.py  test_ms_graph_client.py  test_normalizer.py  test_pipeline.py  test_plaid_adapter.py  test_query_interface.py  test_sanitize.py  test_secrets_loader.py  test_soc2_critical.py  test_soc2_high.py  test_soc2_medium.py  test_storage_silver.py  test_tier1.py  test_tier2.py  test_tier3.py  test_transformer.py  test_validator.py  test_watermark.py
(+70 files in other folders)
